--- a/public_html/layouts/basic/skins/login.css
+++ b/public_html/layouts/basic/skins/login.css
@@ -7,6 +7,9 @@
 		margin: 0 auto;
 	}
 }
+#loginDiv{
+		margin: 0px auto;
+	}
 @media only screen and (min-width: 480px) {
 	.login-area {
 		max-width: 400px;
@@ -29,8 +32,19 @@
 	margin-top: 70px;
     }
 }
-.forgotpass{
-	margin-top: 10px;
+#forgotpassword .forgotpass{
+	color: #bdbec4;
+	text-decoration: none;
+	margin: 0px 0px 0px 80px;
+	font-family: candara;
+}
+@media only screen and (max-height:480px){
+	#forgotpassword .forgotpass{
+		color: #bdbec4;
+		text-decoration: none;
+		margin: 0px 0px 0px 30px;
+		font-family: candara;
+	}
 }
 .login-text{
 	margin-top:10px;
@@ -39,10 +53,24 @@
 	padding: 0;	
 	margin-top: 5px;
 }
-html,body{
-	background-image: url("images/background.jpg");
-	background-size: 100%;	
-	background-repeat: round;
+#inputGroup{
+	margin: 0px auto;
+}
+html body{
+	background-image: url("images/background.jpg");	
+	background-size: 100%;
+	background-attachment: fixed;
+	-moz-background-size: cover;	
+	background-repeat: repeat-x none;
+	background-repeat: repeat-y none;	
+}
+@media only screen and (max-width: 480px) {
+	html body{
+	background-image: url("images/background_phone.jpg");	
+	background-size: 100%;		
+	background-repeat: repeat-x none;
+	background-repeat: repeat-y none;	
+	}
 }
 .formGroup{
 	
@@ -63,12 +91,11 @@ html,body{
 	border: 0px;
 	border-radius: 0px;
 }
-.login-user{
-	
+.login-user{	
 	border-bottom: 1px solid #969BA6;
 	font-family: candara;
 	color: #fff;
-	margin: 0px auto;   
+	margin: 0px auto;
 }
 .login-password{
 	
@@ -79,13 +106,16 @@ html,body{
 }
 input::-webkit-input-placeholder {
 	color: #fff !important;
+	font-size: 12px;
 } 
 input:-moz-placeholder {
-	color: #fff !important;  
+	color: #fff !important;
+	font-size: 12px;
 }
  
 input::-moz-placeholder {
-	color: #fff !important;  
+	color: #fff !important;
+	font-size: 12px;
 }
  
 input:-ms-input-placeholder {  
@@ -93,16 +123,25 @@ input:-ms-input-placeholder {
 }
 .form-control .input-lg{
 	font-family: candara;
-	color: #fff;	
+	
     }
-.input-lg{
-	outline: none;
-    box-shadow: none;
-    padding: 2px;
+.login-user .form-control:focus{
+	    box-shadow: none;
+}
+.login-password .form-control:focus{
+	    box-shadow: none;
 }
 .fieldContainer{
 	width:100%;
 	height: 100%;
+	padding: 70px;
+}
+@media only screen and (max-width: 480px) {
+	.fieldContainer{
+		width:100%;
+		height: 100%;
+		padding: 0px;
+	}
 }
 .noPadding{
 	padding: 0 !important;
@@ -118,8 +157,7 @@ input:-ms-input-placeholder {
 	background-color: transparent;
 	color: #4a5364 !important;
 }
-.fieldContainer button{
-	
+.fieldContainer button{	
 	font-size: 20px;
 	color: #fff !important;
 	padding: 0 !important;
@@ -139,9 +177,16 @@ input:-ms-input-placeholder {
 .heightDiv_2{
 	height: 53px;
 	border-radius: 0px;
-	width: 230px;	
-	margin: 0px auto;
-	margin-top: 30px;
+	width: 100%;	
+	margin: 30px auto -40px auto;
+}
+@media only screen and (max-height: 480px){
+	.heightDiv_2{
+		height: 53px;
+		border-radius: 0px;
+		width: 100%;	
+		margin: 30px auto 8px auto;
+	}
 }
 forgotPasswordDiv{
 	color: #55CAD1;
