--- a/public_html/layouts/basic/skins/login.css
+++ b/public_html/layouts/basic/skins/login.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 480px) {
 	#loginDiv{
-		margin: 0px auto;
+		width: 100%;
 	}
 	.login-area {
 		max-width: 100%;
@@ -40,69 +40,23 @@
 	margin-top: 5px;
 }
 html,body{
-	background-image: url("images/background.jpg");
-	background-size: 100%;	
-	background-repeat: round;
-}
-.formGroup{
-	
-}
-.container{
-	
+	background: #f0f0f0;
 }
 .login-form .form-group.first-group{
 	margin-bottom: 0px;
 }
 .logo{
 	margin: auto;
-	margin-bottom: 30px;
+	margin-bottom: 0px;
 	max-width: 100%;
 	display: block;
-}
-.form-control{
-	border: 0px;
-	border-radius: 0px;
-}
-.login-user{
-	
-	border-bottom: 1px solid #969BA6;
-	font-family: candara;
-	color: #fff;
-	margin: 0px auto;   
-}
-.login-password{
-	
-	border-bottom: 1px solid #969BA6;
-	font-family: candara;
-	color: #fff;
-	margin: 0px auto;
-}
-input::-webkit-input-placeholder {
-	color: #fff !important;
-} 
-input:-moz-placeholder {
-	color: #fff !important;  
-}
- 
-input::-moz-placeholder {
-	color: #fff !important;  
-}
- 
-input:-ms-input-placeholder {  
-	color: #fff !important;  
-}
-.form-control .input-lg{
-	font-family: candara;
-	color: #fff;	
-    }
-.input-lg{
-	outline: none;
-    box-shadow: none;
-    padding: 2px;
 }
 .fieldContainer{
 	width:100%;
 	height: 100%;
+}
+.fieldContainer .form-group{
+	padding-bottom: 10px;
 }
 .noPadding{
 	padding: 0 !important;
@@ -115,16 +69,21 @@ input:-ms-input-placeholder {
 	font-size:24px;
 }
 .fieldContainer input{
-	background-color: transparent;
+	background-color: #fff !important;
 	color: #4a5364 !important;
 }
 .fieldContainer button{
-	
-	font-size: 20px;
+	font-size: 35px;
 	color: #fff !important;
 	padding: 0 !important;
-	background-color: #55CAD1;
-	font-family: Calibri;
+}
+.marginLeft0{
+	margin-left: 0 !important;
+	padding-left: 0 !important;
+}
+.marginRight0{
+	margin-right: 0 !important;
+	padding-right: 0 !important;
 }
 @media (min-width: 768px) { 
 	.visible-phone{ 
@@ -137,14 +96,7 @@ input:-ms-input-placeholder {
 	}
 }
 .heightDiv_2{
-	height: 53px;
-	border-radius: 0px;
-	width: 230px;	
-	margin: 0px auto;
-	margin-top: 30px;
-}
-forgotPasswordDiv{
-	color: #55CAD1;
+	height: 102px;
 }
 .heightDiv_3{
 	height: 158px;
