--- a/public_html/layouts/basic/skins/style.css
+++ b/public_html/layouts/basic/skins/style.css
@@ -483,7 +483,9 @@ hr {
 	border-bottom: 1px solid #dddddd;
 }
 .widgetsList {
-	max-height: 400px;
+    min-width:150px;
+    max-height:450px;
+    text-align:left;
 	overflow-y: auto;
 	overflow-x: hidden;
 }
@@ -4294,7 +4296,7 @@ html,body,.baseContainer
 	width: 100%;
 	height: 300px;
 }
-@media only screen and (min-width: 1240px){
+@media only screen and (min-width: 1200px){
 	.pull-right-lg{
 		float:right;
 	}
@@ -4314,7 +4316,7 @@ html,body,.baseContainer
 		display:none;
 	}
 }
-@media only screen and (max-width:1240px){
+@media only screen and (max-width: 1200px){
 	.baseContainer:not(.leftPanelOpen) .leftPanel:hover + .basePanel,
 	.baseContainer:not(.leftPanelOpen) .leftPanel.stillOpen + .basePanel{
 		width: calc(100% - 180px);
@@ -4357,12 +4359,12 @@ html,body,.baseContainer
 		display: inline !important;
 	}
 }
-@media only screen and (max-width:1240px) and (min-width: 960px){
+@media only screen and (max-width: 1200px) and (min-width: 992px){
 	.paddingTop10-md{
 		padding-top: 10px;
 	}
 }
-@media screen and (min-width: 1161px) {
+@media screen and (min-width: 1200px) {
 	#mediumNav,
 	#shortNav,
 	#headerLinksCompact {
@@ -4373,7 +4375,7 @@ html,body,.baseContainer
 		margin-right: 0;
 	}
 }
-@media screen and (max-width: 1160px) and (min-width: 960px) {
+@media screen and (max-width: 1200px) and (min-width: 992px) {
 	.companyLogo {
 		width: 100%;
 	}
@@ -4392,7 +4394,6 @@ html,body,.baseContainer
 	.widget_header .btn-toolbar{
 		margin-bottom: 5px;
 	}
-
 	.listViewActionsDiv .pull-right{
 		float: left !important;
 	}
@@ -4429,15 +4430,7 @@ html,body,.baseContainer
 		text-align:left;
 	}
 }
-@media only screen and (min-width: 992px) {
-	.conditionList .conditionField{
-		padding-left: 0;
-	}
-	.blockContainer .blockContent .fieldLabel{
-		text-align:right
-	}
-}
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 992px) {
 	.detailViewTable .fieldsLabelValue{
 		border-bottom: 1px solid #ddd;
 	}
@@ -4619,7 +4612,13 @@ html,body,.baseContainer
 		height: auto !important;
 	}
 }
-@media screen and (min-width: 960px) {
+@media only screen and (min-width: 992px) {
+	.conditionList .conditionField{
+		padding-left: 0;
+	}
+	.blockContainer .blockContent .fieldLabel{
+		text-align:right
+	}
 	.detailViewTable .fieldsLabelValue{
 		vertical-align: top;
 		border-right: 1px solid #ddd;
@@ -4742,7 +4741,7 @@ html,body,.baseContainer
 		height: auto !important;
 	}
 }
-@media only screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
 	.basePanel.menuOpen{
 		left:180px;
 		width: calc(100% - 180px);
@@ -4803,7 +4802,7 @@ html,body,.baseContainer
 		font-size: 15px;
 	}
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
 	.mainBody{
 		bottom:17px;
 	}
