--- a/public_html/install/tpl/resources/css/style.css
+++ b/public_html/install/tpl/resources/css/style.css
@@ -5,6 +5,11 @@ html {
 body {
 	color: #555;
 	height: 98%;
+	background: #f5faee;
+}
+
+.o-install__header__wrapper {
+	box-shadow: 0 0 5px #ccc;
 }
 
 .page-container {
