Adjusted mentions (owners) templating with img to ckeditor

--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -290,6 +290,10 @@
 	&__completion {
 		width: inherit;
 
+		&[src=""] {
+			display: none;
+		}
+
 		&__container {
 			width: calculate-rem(30px);
 			height: fit-content;
