Corrected viewport height bugs with different footer configurations

--- a/public_html/layouts/basic/styles/layout/_Base.scss
+++ b/public_html/layouts/basic/styles/layout/_Base.scss
@@ -12,6 +12,10 @@
 	bottom: $h-footer-user-info;
 }
 
+.limited-footer--active .mainBody {
+	bottom: $h-footer-limited;
+}
+
 .user-info--active.limited-footer--active .mainBody {
 	bottom: $h-footer;
 }
