--- a/public_html/layouts/basic/styles/_Variables.scss
+++ b/public_html/layouts/basic/styles/_Variables.scss
@@ -41,6 +41,8 @@ $h-dashboard-tabs: calculate-rem(58px);
 $h-header-logo: calculate-rem(52px);
 $w-header-search: 500px;
 $h-main-viewport: calc(100vh - (#{$h-footer} + #{$h-header}));
+$h-main-viewport-limited-footer: calc(100vh - (#{$h-footer-limited} + #{$h-header}));
+
 $h-date-list: calculate-rem(95px);
 $h-filter-tabs: calculate-rem(43px);
 $p-bs4-button: 0.375rem 0.75rem;
