--- a/public_html/layouts/basic/styles/layout/_Header.scss
+++ b/public_html/layouts/basic/styles/layout/_Header.scss
@@ -74,6 +74,14 @@
 	}
 }
 
+.limited-footer--active {
+	.remindersNoticeContainer,
+	.remindersNotificationContainer,
+	.modalRightSiteBar {
+		height: $h-main-viewport-limited-footer;
+	}
+}
+
 .remindersContent {
 	margin: 5px 8px 0 8px;
 
