Added styles correction for setting inventory column width

--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -241,6 +241,11 @@
 	width: fit-content !important;
 }
 
+.u-w-max {
+	width: max-content !important;
+	width: -moz-max-content !important;
+}
+
 .u-w-max-320px {
 	max-width: 320px !important;
 }
