--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -291,7 +291,11 @@
 }
 
 .u-min-w-650px {
-	min-width: 650px !important;
+	min-width: calculate-rem(650px) !important;
+}
+
+.u-min-w-300px {
+	min-width: calculate-rem(300px) !important;
 }
 
 .u-w-1em {
@@ -562,5 +566,18 @@
 .u-align-middle-children {
 	* {
 		vertical-align: middle !important;
+	}
+}
+
+.u-before-block:before {
+	content: '';
+	display: block;
+}
+
+@for $i from 1 through 100 {
+	.u-table-column-vw-#{$i} {
+		&:before {
+			width: #{$i}vw;
+		}
 	}
 }
