--- a/public_html/layouts/basic/styles/libraries/_Libraries.scss
+++ b/public_html/layouts/basic/styles/libraries/_Libraries.scss
@@ -390,7 +390,7 @@ ul.ui-autocomplete {
 		border-top: unset !important; //floatThead added this to table, causing additional border
 	}
 
-	table-layout: unset !important;
+	//table-layout: unset !important;
 }
 
 //-------- flag-icon --------//
