moved modal backdrop to _bootstrap css file

--- a/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
+++ b/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
@@ -84,3 +84,7 @@ label.btn[class*=btn-outline-] {
 .input-group.input-group-sm {
 	min-width: calculate-rem(65px);
 }
+
+.modal-backdrop {
+	z-index: 1031;
+}
