Added minor layout corrections in user's details

--- a/public_html/layouts/basic/styles/layout/_Header.scss
+++ b/public_html/layouts/basic/styles/layout/_Header.scss
@@ -413,10 +413,12 @@
 	.breadcrumb {
 		background: none;
 		flex-wrap: nowrap;
+		align-items: center;
 	}
 
 	.breadcrumb-item {
 		white-space: nowrap;
+		height: fit-content;
 
 		&.active {
 			color: darken($breadcrumb-active-color, 10%);
