--- a/public_html/layouts/basic/styles/pages/_Detail.scss
+++ b/public_html/layouts/basic/styles/pages/_Detail.scss
@@ -14,6 +14,10 @@
 		@extend .border-top;
 	}
 
+	.fieldLabel {
+		height: inherit;
+	}
+
 	.fieldLabel.medium, .fieldValue.medium {
 		padding: 10px;
 		min-height: 40px;
@@ -329,6 +333,12 @@
 	.details {
 		padding-bottom: 10px;
 		padding-top: 10px;
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+	.detailViewTable .fieldValue .js-detail-quick-edit {
+		display: none;
 	}
 }
 
