--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -327,13 +327,14 @@
 	}
 
 	&__header {
+		display: flex;
+		align-items: center;
 		border-top-left-radius: 0.3rem;
 		border-top-right-radius: 0.3rem;
 
 		&__buttons {
-			float: right !important;
-			margin-top: -0.2rem;
-			margin-left: 5px;
+			padding-left: .25rem;
+			margin-left: auto;
 		}
 	}
 }
